--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "browser-router": "^0.2.0",
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
+    "firebase": "^9.16.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
