--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "validator": "^13.7.0"
   },
