--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "firebase": "^9.16.0",
+    "mdbootstrap": "^4.20.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "react": "^18.2.0",
