--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "firebase": "^9.16.0",
+    "hamburgers": "^1.2.1",
     "mdbootstrap": "^4.20.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.0",
     "validator": "^13.7.0"
   },
