--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@react-spring/web": "^9.7.3",
     "bootstrap": "^5.2.3",
     "browser-router": "^0.2.0",
     "emailjs": "^4.0.1",
@@ -25,7 +26,6 @@
     "react-icons": "^4.12.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.0",
-    "react-scroll-parallax": "^3.4.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
