--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.12.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.0",
+    "react-slick": "0.29.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
