--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://Debug-001.github.io/webversed",
   "name": "yes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -32,6 +35,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "gh-pages": "6.1.1",
     "sass": "^1.57.1",
     "vite": "^4.4.9"
   }
