--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage":"https://Debug-001.github.io/webversed",
+  "homepage": "https://Debug-001.github.io/webversed",
   "name": "yes",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -24,7 +24,7 @@
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "16.14.0",
     "react-icons": "^4.12.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.0",
