--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "11.11.3",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "browser-router": "^0.2.0",
@@ -23,10 +24,10 @@
     "mdbootstrap": "^4.20.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
-    "react": "^16.2.0",
-    "react-dom": "16.14.0",
+    "react": "^18.2.0",		
+    "react-dom": "^18.2.0",
+    "react-awesome-reveal": "4.2.7",
     "react-icons": "^4.12.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.0",
     "react-slick": "0.29.0",
     "validator": "^13.7.0"
