--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Debug-001.github.io/webversed",
+  "homepage": "https://debug-001.github.io/Webversed/",
   "name": "yes",
   "private": true,
   "version": "0.0.0",
