--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "mdbootstrap": "^4.20.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
-    "react": "^18.2.0",		
-    "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "react-awesome-reveal": "4.2.7",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.0",
     "react-slick": "0.29.0",
+    "slick-carousel": "1.8.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
