--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router-dom": "^6.8.0",
     "react-slick": "0.29.0",
     "slick-carousel": "1.8.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^2.12.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
