--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "react-awesome-reveal": "4.2.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-phone-number-input": "3.3.8",
     "react-router-dom": "^6.8.0",
     "react-slick": "0.29.0",
-    "slick-carousel": "1.8.1",
     "react-tsparticles": "^2.12.2",
+    "slick-carousel": "1.8.1",
     "tsparticles": "^2.12.0",
     "validator": "^13.7.0"
   },
